this commit has some fixed background issues as well as some font changes and spacing worked on. we need to finish adding the bottom menu pages and work on the bootstrap issues as well as img issuses. 7/17/2014 at 2:30pm

--- a/www/css/Main.css
+++ b/www/css/Main.css
@@ -1,6 +1,6 @@
 /* app css stylesheet */
 body {
-   overflow-x: hidden;
+/*   overflow-x: hidden;*/
 }
 
 .phones {
@@ -25,14 +25,18 @@ body {
 
 /*****meun bar at the top**********/
 #wrapper{
-    position: absolute;
+    position:relative;
     top: 60px;
     width: 100%;
-    height: 300px;
-    background:#eee; 
-    z-index:0;
+    padding: 2%;
+    background:#ffffff; 
     height: 1166px;
-    overflow: hidden;
+    background:url(../img/background_grid3.png) no-repeat center center fixed;
+/*    background:url(../img/background_grid3.png) no-repeat center center fixed; */
+/*  -webkit-background-size: cover;*/
+/*  -moz-background-size: cover;*/
+/*  -o-background-size: cover;*/
+/*  background-size: cover;*/
  
 }  
 
@@ -56,14 +60,16 @@ body {
 
 
 
+
 /********bottom menu************/
 
 
 
 #b_menu{position:fixed;
-    top:92%; 
+    top:91%; 
     padding:0px;
     width:100%;
+    z-index: 30;
     
     }
 
@@ -107,17 +113,6 @@ body {
 /**** Community Feed****/
 
 
-
-
-/**#avatar{position:relative;
-    top:45px;
-    height:250px;
-    width: 100%;
-    padding: 0% 0% 0% 0%;
-    margin: 0px;
-}**/
-
-
 .avatar{position:relative;
     top:190px;
     width: 90px;  
@@ -128,8 +123,10 @@ body {
 #post{
     position:relative;
     width:100%;    
-    top:40px;
-    height:170px;
+    top:10px;
+    height:150px;
+    margin-bottom:3%;
+    padding: 0% 2% 0% 2%;
 }
 
 
@@ -155,32 +152,35 @@ body {
   bottom:80px;     
 }
 
-#author{position:relative;
-height:30px; 
+#author{position:relative;    
+height:30px;
+padding:0% 5% 0% 5%;
+margin: 0% 5% 0% 5%;    
+text-align: center;
+font-family: roboto medium;    
 }
 
 
 
-#contentbox{position:absolute;
-    right:50px;
-    left:135px;
-    top:30px;
-    bottom:30px;
-    height:105px;
-    width:490px;
-    margin: 0px 0px 0px 15px;
-    padding:0px 0px 0px 10px; 
+#contentbox{position:absolute; 
     background-color:#EEEEEE;
+    top:20px;
+    width: 96%;
+    height: 50%;
+    z-index: -1;
+    padding-left:40%;
+    border-radius: 10px 0px 0px 0px;
+    overflow: auto;
 }
 
 
 #likeicon{position:relative;
       background:#0BA1F4;
-      top:0px;
+      top:20px;
       bottom:100px;
-      height:30px;
       width:100%;
       border-radius:0px 0px 10px 10px;
+    text-align:left;
       -webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 0px 6px -6px black;
 	        box-shadow: 0 5px 10px -7px black;   
@@ -190,28 +190,44 @@ height:30px;
 
 .slide_image{
     width: 100%;
-    height: 0px;
+    height:0px;
 }
 /***group message******/
 
 #messageicon{position: relative;
-    top:60px;
+    top:20px;
     height: 80px;
-    background:;
 }
 
+#gmessageicon{
+    position: relative;
 
-#scrollable_g{position:relative;
-padding: 10px 20px 30px 0px;
-    top: 40px;
     
 }
 
-#message{position:relative;
+#group_content{
+    position: relative;
+    padding:5px;
+    bottom:40px;
+    width: 300px;
+    height: 40px;
+    margin:0% 30% 0% 30%;
+}
+
+#scrollable_g{position:relative;
+padding: 10% 0% 10% 0%;
+    top: 20px;
+    width: 100%;
+    
+    
+}
+
+#message{position:relative;    
 top:0px;
 margin:15px;
+height: 100px;    
 background-color:#ffffff;     
-border-radius:5px;
+border-radius:15px 0px 15px 0px;
 border: 1px solid #EEEEEE;
 -webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 0px 6px -6px black;
@@ -219,6 +235,15 @@ border: 1px solid #EEEEEE;
     
 }
 
+#groupmsg{
+    position: relative;
+    text-align: center;
+    bottom: 40px;
+    font-family:roboto black;
+    font-size: 12pt;
+    text-decoration: underline;
+    
+}
 /***groupfeed****/
 
 
@@ -254,7 +279,7 @@ background-color:#ffffff;
 border-radius: 0px 0px 25px 0px;    
 -webkit-box-shadow: 0 8px 6px -6px black;
 	   -moz-box-shadow: 0 0px 6px -6px black;
-	        box-shadow: 0 5px 10px -7px black;     
+	        box-shadow: 0 5px 10px -7px black;
 }
 
 
